# My99Solutions

./: My99Solutions.cabal  README.md
src/: Encoded.hs  Ex1.hs  Ex10.hs  Ex11.hs  Ex12.hs  Ex13.hs  Ex14.hs  Ex15.hs  Ex16.hs  Ex17.hs  Ex18.hs  Ex19.hs  Ex2.hs  Ex20.hs  Ex21.hs  Ex22.hs  Ex23.hs  Ex24.hs  Ex25.hs  Ex26.hs  Ex27.hs  Ex28.hs  Ex3.hs  Ex31.hs  Ex32.hs  Ex33.hs  Ex34.hs  Ex35.hs  Ex36.hs  Ex37.hs  Ex39.hs  Ex4.hs  Ex40.hs  Ex41.hs  Ex46.hs  Ex48.hs  Ex49.hs  Ex5.hs  Ex50.hs  Ex6.hs  (+5 more)
