name:           My99Solutions
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Davide

executable My99Solutions
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -fcase-merge -fdo-eta-reduction -fdo-lambda-eta-expansion -fexcess-precision
  other-modules:   
                   Ex11,
                   Encoded

library 
  build-depends:   base >= 4
  ghc-options:     -Wall
  hs-source-dirs:  src
  other-modules:   
                   Ex11,
                   Encoded

