name:           My99Solutions
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Davide

executable My99Solutions
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   random >=1.0.1 && <1.1
  ghc-options:     -fcase-merge -fdo-eta-reduction -fdo-lambda-eta-expansion -fexcess-precision
  other-modules:   
                   Ex11,
                   Encoded,
                   Ex12,
                   Ex13,
                   Ex14,
                   Ex15,
                   Ex16,
                   Ex17,
                   Ex18,
                   Ex19,
                   Ex20,
                   Ex21,
                   Ex22,
                   Ex23,
                   Ex24,
                   Ex25,
                   Ex26,
                   Ex27,
                   Ex28

library 
  build-depends:   
                   base >= 4,
                   random >=1.0.1 && <1.1
  ghc-options:     -Wall
  hs-source-dirs:  src
  other-modules:   
                   Ex11,
                   Encoded,
                   Ex12,
                   Ex13,
                   Ex14,
                   Ex15,
                   Ex16,
                   Ex17,
                   Ex18,
                   Ex19,
                   Ex20,
                   Ex21,
                   Ex22,
                   Ex23,
                   Ex24,
                   Ex25,
                   Ex26,
                   Ex27,
                   Ex28

